Second test to fix hover on iOS

--- a/main.css
+++ b/main.css
@@ -40,6 +40,7 @@ body h1 {
 
 .vibe-box:hover {
 	background-color: #F4282D;
+	cursor: pointer;
 }
 
 .animation-settings {
